# rpl5050

./: .gitignore  NOTICE  README.md  RELEASE_NOTES.md  TAURI_QUICK_START.md  TAURI_SETUP.md  copy.txt  index.html  package-lock.json  package.json  sync-from.sh  tauri.conf.json
.claude/: settings.local.json
css/: calc.css
docs/: COMMANDS.md  DATA_TYPES.md  REVIEW.md  ROADMAP.md  RPL.md  TESTS.md  formulas.rpl  pdf-index.csv
scripts/: build-frontend-dist.mjs  download-llm.mjs  gen-build-info.mjs  pre-commit.sh  reflow-hp50-commands.mjs  update-hp50-badges.mjs
src/: app.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/rpl/: algebra.js  formatter.js  ops.js  parser.js  persist.js  pretty.js  stack.js  state.js  types.js  units.js
src/ui/: beep.js  display.js  entry.js  interactive-stack.js  keyboard.js  paging.js  shortcuts.js  side-panel.js
tests/: flake-bisect.mjs  flake-scan.mjs  helpers.mjs  run-order.mjs  sanity.mjs  test-algebra.mjs  test-all.mjs  test-arrow-aliases.mjs  test-binary-int.mjs  test-comparisons.mjs  test-control-flow.mjs  test-control-flow.mjs.bak  test-control-flow.mjs.bak2  test-entry.mjs  test-eval.mjs  test-helpers.mjs  test-lists.mjs  test-matrix.mjs  test-numerics.mjs  test-persist.mjs  test-reflection.mjs  test-stack-ops.mjs  test-stats.mjs  test-types.mjs  test-ui.mjs  test-units.mjs  test-variables.mjs
www/: giac-smoke.html  index.html
www/css/: calc.css
www/docs/: hp50-commands.html
www/src/: app.js
www/src/ai/: chat-bot.js  llm-worker.js  llm.js  remote-llm.js  (+1 more)
(+18 files in other folders)
