[package]
name = "rp5050ai"
version = "0.1.0"
description = "RPL Scientific Calculator - Modern HP50g Adaptation"
authors = ["RPL5050 Contributors"]
license = "MIT"
repository = "https://github.com/user/rpl5050"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-window-state = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
